syntax = "proto3";

option go_package = "github.com/mihajlo-ra92/XML/common/user";

package user;

import "google/api/annotations.proto";

service AuthService{
    rpc Login(LoginRequest) returns(LoginResponse){
        option (google.api.http) = {
            post: "/login"
            body: "login"
        };
    }
    rpc AuthCreateAccommodation(AuthCreateAccommodationRequest) returns(AuthCreateAccommodationResponse){
        option (google.api.http) = {
            post: "/accomodation"
            body: "*"
        };
    }
}

message AuthCreateAccommodationRequest{
    string jwt = 1;
    string name = 2;
    string location = 3;
    repeated string benefits = 4;
    repeated string pictures = 5;
    uint32 minGuests = 6;
    uint32 maxGuests = 7;
}

message AuthCreateAccommodationResponse{
    Accommodation accomodation = 1;
}

message Accommodation {
    string id = 1;
    string hostId = 2;
    string name = 3;
    string location = 4;
    repeated string benefits = 5;
    repeated string pictures = 6;
    uint32 minGuests = 7;
    uint32 maxGuests = 8;
}

message LoginRequest {
    AuthLogin login = 1;
}

message AuthLogin {
    string username = 1;
    string password = 2;
}

message LoginResponse {
   string jwt = 1;
}
